--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,6 @@ jobs:
       uses: docker/build-push-action@v6.18.0
       with:
         push: true
-        tags:
-          - ddg-mail-generator:$(date +%s)
-          - ddg-mail-generator:latest
+        tags: |
+          ghcr.io/ddg-mail-generator:$(date +%s)
+          ghcr.io/ddg-mail-generator:latest
