--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: 'Login to GitHub Container Registry'
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}    
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v6.18.0
       with:
         push: true
-        tags: ghcr.io/ddg-mail-generator:latest
+        tags: ghcr.io/kon-foo/ddg-mail-generator:latest
